--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -21,6 +21,10 @@ body {
 	background: none;
 }
 
+.jumbotron p.active {
+     color: #1f6ddd;
+}
+
 .jumbotron:after {
      content:"";
      background: url("../images/lorempixel.jumbotron.jpeg");
@@ -40,3 +44,5 @@ body {
 .project a {
      text-align: center;
 }
+
+
